--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+
   padding: 0;
   margin: 0;
 }
@@ -10,31 +11,34 @@ body {
   justify-content: center;
   overflow-y: scroll;
   width: 100vw;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 
 .card {
-  box-shadow: 0px 10px 68px 21px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 68px 21px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   border-radius: 1rem;
   border: 2px solid #F6F6F6;
   overflow: hidden;
   margin: 0 0.5rem;
-  width: 50vw;
+  width: 30vw;
   min-width: fit-content;
 }
 
 .card-header {
-  border-bottom: 1px solid #F6F6F6;
-  padding: 1rem 1.2rem;
   font-size: 1rem;
-  background-color: #d7017e;
   color: white;
+  background-color: #d7017e;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  padding: 50px;
+
 }
 
 .card-header img {
@@ -44,7 +48,7 @@ body {
 .card-header h1 {
   width: 100%;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .card-header p {
@@ -82,14 +86,15 @@ body {
 
 .chip {
   padding: 0.3rem 1rem;
-  background-color: #f5f5f5;
-  border-radius: 0.2rem;
+  background-color: #d43993;
+  border-radius: 0.5rem;
   margin: 0.2rem;
+  color: white;
 }
 
 .chip-label {
   font-size: 0.8rem;
-  color: #000
+  color: white;
 }
 
 
@@ -104,9 +109,12 @@ body {
 
 }
 
-.Informazioni_studente h3,
-.Informazioni_esame h3 {
+.Informazioni_studente h2,
+.Informazioni_esame h2 {
   margin-bottom: 10px;
+  font-size: 2.3rem;
+  width: 90%;
+  text-align: left;
 }
 
 input[type="text"] {
@@ -115,6 +123,8 @@ input[type="text"] {
   border: 1px solid black;
   outline: none;
   width: 80%;
+  box-sizing: border-box;
+
 }
 
 input[type="number"] {
@@ -123,6 +133,8 @@ input[type="number"] {
   border: 1px solid black;
   outline: none;
   width: 80%;
+  box-sizing: border-box;
+
 
 }
 
@@ -131,9 +143,17 @@ input[type="date"] {
   margin-bottom: 5px;
   border: 1px solid black;
   outline: none;
-  width: 80%;
+  width: 50%;
+  box-sizing: border-box;
+}
 
-
+input[type="time"] {
+  padding: 5px;
+  margin-bottom: 5px;
+  border: 1px solid black;
+  outline: none;
+  width: 50%;
+  box-sizing: border-box;
 }
 
 .Informazioni_esame span,
@@ -166,9 +186,7 @@ input[type="date"] {
   flex-direction: column;
   align-items: center;
   margin-top: 10px;
-
-  margin-bottom: 30px;
-  padding: 20px;
+  margin-bottom: 20px;
 
 
 }
@@ -176,10 +194,41 @@ input[type="date"] {
 .mezzi_comp .list {
   height: 300px;
   overflow-y: auto;
+  padding: 90px;
+  padding-bottom: 0;
+  padding-top: 0px;
+  box-sizing: border-box;
+  width: 100%;
+
 }
 
-.mezzi_comp h3 {
-  margin-bottom: 10px;
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+.mezzi_comp .list {
+  scrollbar-width: auto;
+  scrollbar-color: #8f54a0 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+.mezzi_comp .list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.mezzi_comp .list::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+.mezzi_comp .list::-webkit-scrollbar-thumb {
+  background-color: #d7017e;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
+
+.mezzi_comp h2 {
+  margin-bottom: 5px;
+  font-size: 2.3rem;
+  width: 90%;
+  text-align: left;
 
 }
 
@@ -201,23 +250,131 @@ input[type="date"] {
   margin-top: 10px;
   justify-content: center;
 
+
+
 }
+
+.switchs {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 34px;
+
+}
+
+.switch:first-child {
+  border-right: 1px solid white;
+}
+
+.switch:last-child {
+  border-right: 1px solid white;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100% !important;
+
+}
+
+
+input:checked+.slider {
+  background-color: #d7017e;
+  color: white;
+}
+
+
 @media screen and (max-width: 1200px) {
-  .card{
-    width: 60vw;
-  }
-}
-@media screen and (max-width: 800px) {
-  .card{
-    width: 70vw;
-  }
-}
-@media screen and (max-width: 600px) {
-  .card{
-    width: 80vw;
+  .card {
+    width: 40vw;
   }
 }
 
-.DownloadButton{
+@media screen and (max-width: 800px) {
+  .card {
+    width: 40vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100% !important;
+    margin: 0;
+  }
+  body{
+    padding: 0;
+  }
+}
+
+.Download {
   cursor: pointer;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.Download button {
+  cursor: pointer;
+  background-color: #d7017e;
+  border: none;
+  outline: none;
+  padding: 20px;
+  font-size: 2.2rem;
+  box-sizing: border-box;
+  color: white;
+  border-radius: 1rem;
+
+}
+
+input[type="checkbox"] {
+  background-color: #d7017e;
+}
+
+#root {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+.Designer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 1rem;
+  color: rgb(92, 92, 92);
+}
+.Designer a{
+  text-align: none;
+  color: rgb(92, 92, 92);
+
+}
+.Designer a:hover{
+  color: #CC0000;
 }
